--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/assets/mindgpt-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Converse com o futuro: ChatGPT, a inteligência artificial que entende você!" />
+    <meta name="description" content="Converse com o futuro: ChatGPT no WhatsApp, a inteligência artificial que entende você!" />
     <title>MindGPT | GPT-3 no WhatsApp</title>
   </head>
   <body>
